<resources>
    <!-- Error -->
    <string name="error_default">Error Occurred!</string>
    <string name="error_connection">You have no internet connection!</string>
    <string name="ops_title">Opss!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="try_again">Tente Novamente!</string>
    <string name="sucesso_title">Parabéns!</string>
    <string name="checkin_button">Realizar Check-In</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Nome</string>
    <string name="checkin_title">Check-In no Evento</string>
    <string name="checkin_info">Suas informações ficam salvas após primeiro check-in</string>
</resources>