<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/attribute_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/attribute_module_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/attributes_shipping_labeXl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/checkin_title"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/colorEvent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/attribute_divider_stock"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/colorEvent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:hint="@string/hint_name"
            android:maxLines="1" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="4dp"
            android:hint="@string/hint_email"
            android:maxLines="1" />

        <TextView
            android:id="@+id/attributes_shipping_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/checkin_info"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/colorEvent"
            android:textSize="14sp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/eventButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorEvent"
        android:text="@string/checkin_button" />
</LinearLayout>